--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -2365,3 +2365,400 @@ body .lomoTemplate .template04 {
     }
   }
 }
+
+//画册342mmX342mm
+#product{
+  .hc_342X342{  //旅行记
+    .titlePage_bg{
+      width: 324px;
+      height: 162px;
+    }
+    .time_bg{
+      width: 324px;
+      height: 192px;
+      position: relative;
+      .firstPage{
+        background: #1d1c19;
+        height:162px ;
+        .page_bg{
+          height:162px;
+        }
+      }
+      .lastPage{
+        background: #efefef;
+        height:162px ;
+        .page_bg{
+          height:162px;
+        }
+      }
+      .pubilc_div{
+        height:192px;
+      }
+      .time_pu{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top:0;
+        left:0;
+        box-sizing: border-box;border-left: 1px solid #efefef;
+
+        //如果有页脚和封底的时候
+        .page_b{
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          display: block;
+          z-index: 99;
+          text-align: center;
+          background:#efefef;
+        }
+        .title_strong{
+          display: block;
+          text-align: center;
+          line-height: 20px;
+          color: #8b682a;
+
+        }
+        .title_strong2{
+          display: block;
+          text-align: center;
+          font-weight: 400;
+          font-size: 13px;
+          color: #adadad;
+          line-height: 16px;
+        }
+        //旅行记尾部
+        .template_lxj_100{
+          width: 58px;
+          height: 58px;
+          margin:55px auto;
+        }
+        .template_lxj_0{ //首页
+          width: 136px;
+          height: 84px;
+          margin: 0 auto;
+          margin-top: 26px;
+          margin-bottom: 18px;
+        }
+        .template_lxj_1{
+          width: 162px;
+          height: 192px;
+          .mainTitle{
+            height: 12px;
+            line-height: 12px;
+            font-size: 12px;
+            width: 100px;
+            margin-right: 12px;
+            margin-top: 50px;
+          }
+          .box_text{
+            width: 80px;
+            height: 12px;
+            margin-top: 14px;
+            margin-bottom: 74px;
+            margin-right: 12px;
+            line-height: 12px;
+          }
+        }
+        .template_lxj_2{
+          width: 134px;
+          height: 134px;
+          margin:14px auto;
+        }
+        .template_lxj_3{
+          width: 116px;
+          height: 148px;
+          margin: 7px auto;
+          margin-left: 11px;
+
+        }
+        .template_lxj_4{
+          width: 116px;
+          height: 148px;
+          margin: 7px auto;
+          margin-right: 11px;
+        }
+        .template_lxj_5{
+          width: 94px;
+          height: 148px;
+          margin: 7px auto;
+          margin-left: 11px;
+        }
+        .template_lxj_6{
+          width: 94px;
+          height: 148px;
+          margin: 7px auto;
+          margin-right: 11px;
+        }
+        .template_lxj_7{
+          width: 162px;
+          height: 108px;
+          margin: 27px auto;
+        }
+        .page_8{
+          margin-top: 0;
+          //padding-top: 4px;
+        }
+        .template_lxj_8{
+          width: 162px;
+          height: 162px;
+          margin: 0px auto;
+
+        }
+        .template_lxj_9{
+          width: 222px;
+          height: 162px;
+          margin: 0px auto;
+          margin-left: 0px;
+        }
+      }
+    }
+  }
+}
+
+//画册342X250mm
+#product{
+  .hc_342X250{  //旅行记
+    .titlePage_bg{
+      width: 324px;
+      height: 120px;
+    }
+    .time_bg{
+      width: 324px;
+      height: 156px;
+      position: relative;
+      .firstPage{
+        background: #1d1c19;
+        height:162px ;
+        .page_bg{
+          height:120px;
+        }
+        .footer_page{
+          height: 36px;
+        }
+      }
+      .lastPage{
+        background: #efefef;
+        height:120px ;
+        .page_bg{
+          height:120px;
+        }
+        .footer_page{
+          height: 36px;
+        }
+      }
+      .pubilc_div{
+        height:156px;
+      }
+      .time_pu{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top:0;
+        left:0;
+        box-sizing: border-box;border-left: 1px solid #efefef;
+
+        //如果有页脚和封底的时候
+        .page_b{
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          display: block;
+          z-index: 99;
+          text-align: center;
+          background:#efefef;
+        }
+        .title_strong{
+          display: block;
+          text-align: center;
+          line-height: 20px;
+          color: #8b682a;
+
+        }
+        .title_strong2{
+          display: block;
+          text-align: center;
+          font-weight: 400;
+          font-size: 13px;
+          color: #adadad;
+          line-height: 16px;
+        }
+        //旅行记尾部
+        .template_lxj_100{
+          width: 58px;
+          height: 58px;
+          margin:55px auto;
+        }
+        .template_lxj_0{ //首页
+          width: 136px;
+          height: 84px;
+          margin: 0 auto;
+          margin-top: 26px;
+          margin-bottom: 18px;
+        }
+        .page{
+          height: 36px;
+        }
+        .template_lxj_1{
+          width: 162px;
+          height: 162px;
+          .mainTitle{
+            height: 12px;
+            line-height: 12px;
+            font-size: 12px;
+            width: 100px;
+            margin-right: 12px;
+            margin-top: 50px;
+          }
+          .box_text{
+            width: 80px;
+            height: 12px;
+            margin-top: 14px;
+            margin-bottom: 32px;
+            margin-right: 12px;
+            line-height: 12px;
+          }
+        }
+        .template_lxj_2{
+          .mainTitle{
+            height: 12px;
+            line-height: 12px;
+            font-size: 12px;
+            width: 100px;
+            margin-left: 32px;
+            margin-top: 20px;
+            margin-bottom: 0;
+          }
+          .subtitle{
+            height: 12px;
+            line-height: 12px;
+            font-size: 12px;
+            width: 80px;
+            margin-left: 32px;margin-top: 6px;
+            margin-bottom: 6px;
+          }
+          .box_text{
+            width: 100px;
+            line-height: 12px;
+            margin:0;
+            margin-left: 32px;
+            height: 52px;
+            margin-bottom: 12px;
+          }
+        }
+        .template_lxj_3{
+          width: 94px;
+          height: 98px;
+          margin: 11px 0 11px 13px;
+
+        }
+        .template_lxj_4{
+          width: 94px;
+          height: 98px;
+          margin: 11px auto;
+          margin-right: 13px;
+        }
+        .template_lxj_5{
+          width: 142px;
+          height: 108px;
+          margin: 6px auto;
+          .div_page{
+            width: 69px;
+            height: 108px;
+          }
+        }
+        .template_lxj_6{
+          width: 148px;
+          height: 104px;
+          margin:8px auto;
+          .div_page{
+            width: 70px;
+            height: 104px;
+            .div_lxj{
+              height: 48px;
+              background: #d2d2d2;
+              position: relative;
+              overflow: hidden;
+            }
+            .div_lxj:nth-child(2){
+              margin-top: 8px;
+            }
+          }
+          .div_page:nth-child(1){
+            width: 70px;
+          }
+          .div_page:nth-child(2){
+            background: #fff;
+          }
+        }
+
+        .template_lxj_7{
+          width: 148px;
+          height: 104px;
+          margin:8px auto;
+          .div_page{
+            width: 70px;
+            height: 104px;
+            float: left;
+            .div_lxj{
+              height: 48px;
+              background: #d2d2d2;
+              position: relative;
+              overflow: hidden;
+            }
+            .div_lxj:nth-child(2){
+              margin-top: 8px;
+            }
+          }
+          .div_page:nth-child(1){
+            width: 70px;background: #fff;
+          }
+          .div_page:nth-child(2){
+
+            float: right;
+          }
+        }
+        .template_lxj_8{
+          width: 120px;
+          height: 120px;
+          margin: 0;
+          margin-left: 0;
+        }
+        .template_lxj_9{
+          width: 100%;
+          height: 120px;
+          margin: 0;
+        }
+        .template_lxj_10{
+          width: 146px;
+          height: 108px;
+          margin: 6px auto;
+        }
+        .template_lxj_11{
+          width: 120px;
+          height: 120px;
+          margin: 0;
+          margin-left: 41px;
+        }
+        .page_8{
+          margin-top: 0;
+        }
+        .login_footer{ //页脚logo图
+          width: 70px;
+          height: 20px;
+          margin-left: 8px;
+          background:  url('../../assets/img/login_1.png') no-repeat;
+          background-size: 100%;
+        }
+        .template_lxj_100{
+          width: 146px;
+          height: 90px;
+          margin: 0 auto;
+          margin-top:6px;
+
+        }
+
+      }
+    }
+  }
+}
