--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -2511,6 +2511,21 @@ body .lomoTemplate .template04 {
           margin: 0px auto;
           margin-left: 0px;
         }
+        .template_lxj_100{
+          width: 132px;
+          height: 72px;
+          margin: 0px auto;
+          margin-top: 24px;
+        }
+        .login_footer{
+          width: 92px;
+          height: 30px;
+          background: url("../../assets/img/title_logo.png") no-repeat;
+          background-size: 100%;
+          margin-left: 12px;
+          margin-top: 24px;
+          margin-bottom: 12px;
+        }
       }
     }
   }
@@ -2747,7 +2762,7 @@ body .lomoTemplate .template04 {
           width: 70px;
           height: 20px;
           margin-left: 8px;
-          background:  url('../../assets/img/login_1.png') no-repeat;
+          background: url("../../assets/img/title_logo.png") no-repeat;
           background-size: 100%;
         }
         .template_lxj_100{
@@ -2758,6 +2773,175 @@ body .lomoTemplate .template04 {
 
         }
 
+      }
+    }
+  }
+}
+
+//hc_250X342 画册250X342
+#product{
+  .hc_250X342{  //旅行记
+    .titlePage_bg{
+      width: 324px;
+      height: 220px;
+    }
+    .time_bg{
+      width: 324px;
+      height: 250px;
+      position: relative;
+      .firstPage{
+        background: #1d1c19;
+        height:220px ;
+        .page_bg{
+          height:220px;
+        }
+      }
+      .lastPage{
+        background: #efefef;
+        height:220px ;
+        .page_bg{
+          height:220px;
+        }
+      }
+      .pubilc_div{
+        height:250px;
+      }
+      .time_pu{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top:0;
+        left:0;
+        box-sizing: border-box;border-left: 1px solid #efefef;
+
+        //如果有页脚和封底的时候
+        .page_b{
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          display: block;
+          z-index: 99;
+          text-align: center;
+          background:#efefef;
+        }
+        .title_strong{
+          display: block;
+          text-align: center;
+          line-height: 20px;
+          color: #8b682a;
+
+        }
+        .title_strong2{
+          display: block;
+          text-align: center;
+          font-weight: 400;
+          font-size: 13px;
+          color: #adadad;
+          line-height: 16px;
+        }
+        //旅行记尾部
+        .template_lxj_100{
+          width: 58px;
+          height: 58px;
+          margin:55px auto;
+        }
+        .page_8{margin-top: 0;}
+        .template_lxj_0{ //首页
+          width: 136px;
+          height: 84px;
+          margin: 0 auto;
+          margin-top: 26px;
+          margin-bottom: 18px;
+        }
+        .template_lxj_1{
+          width: 162px;
+          height: 250px;
+          .mainTitle{
+            height: 12px;
+            line-height: 12px;
+            font-size: 12px;
+            width: 100px;
+            margin-right: 12px;
+            margin-top: 50px;
+          }
+          .box_text{
+            width: 80px;
+            height: 12px;
+            margin-top: 14px;
+            margin-bottom: 132px;
+            margin-right: 12px;
+            line-height: 12px;
+          }
+        }
+        .template_lxj_2{
+          width: 146px;
+          height: 130px;
+          margin:45px auto;
+        }
+        .template_lxj_3{
+          width: 146px;
+          height: 182px;
+          margin:19px auto;
+        }
+        .template_lxj_4{
+          width: 162px;
+          height: 130px;
+          margin:45px auto;
+        }
+        .template_lxj_5{
+          width: 162px;
+          height: 98px;
+          margin:61px auto;
+        }
+        .template_lxj_6{
+          width: 162px;
+          height: 220px;
+          margin:0 auto;
+        }
+        .template_lxj_7{
+          width: 140px;
+          height: 92px;
+          margin:30px auto;
+          .div_page{
+            width: 66px;
+            height: 92px;
+            .div_lxj{
+              height: 44px;
+              background: #d2d2d2;
+              position: relative;
+              overflow: hidden;
+            }
+            .div_lxj:nth-child(2){
+              margin-top: 4px;
+            }
+          }
+          .div_page:nth-child(1){
+            width: 70px;
+          }
+          .div_page:nth-child(2){
+            background: #fff;
+          }
+        }
+        .template_lxj_9{
+          width: 278px;
+          height: 220px;
+          margin: 0 auto;
+          margin-left: 0;
+        }
+        .template_lxj_100{
+          width: 142px;
+          height: 129px;
+          margin: 0 auto;
+          margin-top: 40px;
+        }
+        .login_footer{
+          width: 92px;
+          height: 30px;
+          background: url("../../assets/img/title_logo.png") no-repeat;
+          background-size: 100%;
+          margin-left: 8px;
+          margin-top: 17px;
+        }
       }
     }
   }
