--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -2946,3 +2946,293 @@ body .lomoTemplate .template04 {
     }
   }
 }
+//hc_342X500  画册342X500
+#product{
+  .hc_342X500{  //旅行记
+    .titlePage_bg{
+      width: 324px;
+      height: 237px;
+    }
+    .time_bg{
+      width: 324px;
+      height: 260px;
+      position: relative;
+      .firstPage{
+        background: #1d1c19;
+        height:237px ;
+        .page_bg{
+          height:237px;
+        }
+      }
+      .lastPage{
+        background: #efefef;
+        height:237px ;
+        .page_bg{
+          height:237px;
+        }
+      }
+      .pubilc_div{
+        height:260px;
+      }
+      .time_pu{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top:0;
+        left:0;
+        box-sizing: border-box;border-left: 1px solid #efefef;
+
+        //如果有页脚和封底的时候
+        .page_b{
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          display: block;
+          z-index: 99;
+          text-align: center;
+          background:#efefef;
+        }
+        .title_strong{
+          display: block;
+          text-align: center;
+          line-height: 20px;
+          color: #8b682a;
+
+        }
+        .title_strong2{
+          display: block;
+          text-align: center;
+          font-weight: 400;
+          font-size: 13px;
+          color: #adadad;
+          line-height: 16px;
+        }
+        //旅行记尾部
+        .template_lxj_100{
+          width: 58px;
+          height: 58px;
+          margin:55px auto;
+        }
+        .page_8{margin-top: 0;}
+        .template_lxj_0{ //首页
+          width: 136px;
+          height: 84px;
+          margin: 0 auto;
+          margin-top: 26px;
+          margin-bottom: 18px;
+        }
+        .template_lxj_1{
+          width: 162px;
+          height: 260px;
+          .mainTitle{
+            height: 20px;
+            line-height: 20px;
+            font-size: 12px;
+            width: 100px;
+            text-align: center;
+            margin: 17px auto 8px;
+          }
+          .box_text{
+            width: 80px;
+            height: 14px;
+            line-height: 14px;
+            margin: 0 auto;
+          }
+          .box_text3{
+            width: 112px;
+            height: 12px;
+            line-height: 12px;
+            margin: 10px auto 0;box-shadow: #888888 2px 2px 2px;
+            background: #e9e9e9;
+          }
+          .box_text4{
+            width: 70px;
+            height: 12px;
+            line-height: 12px;
+            margin: 10px auto 0;box-shadow: #888888 2px 2px 2px;
+            background: #e9e9e9;
+          }
+          .box_text5{
+            width: 50px;
+            height: 12px;
+            line-height: 12px;
+            margin: 10px auto 0;box-shadow: #888888 2px 2px 2px;
+            background: #e9e9e9;
+          }
+          .box_text6{
+            width: 40px;
+            height: 12px;
+            line-height: 12px;
+            margin: 10px auto 90px;box-shadow: #888888 2px 2px 2px;
+            background: #e9e9e9;
+
+          }
+        }
+        .template_lxj_2{
+          width: 100%;
+          height: 260px;
+          margin:0px auto;
+          .mainTitle{
+            width: 140px;
+            height: 20px;
+            line-height: 20px;
+            margin: 20px auto 24px;
+          }
+          .box_text{
+            height: 114px; margin-bottom: 59px;
+          }
+          .text_left,.text_right{
+            width: 62px;
+            height: 114px;
+
+          }
+        }
+        .template_lxj_3{
+
+          .mainTitle{
+            width: 76px;
+            height: 12px;
+            line-height: 12px;
+            margin:110px 0 111px 18px;
+          }
+        }
+        .text{
+          margin-bottom: 20px;
+        }
+        .template_lxj_4{
+          width: 130px;
+          height: 136px;
+          margin:44px auto 25px;
+
+        }
+        .template_lxj_5{
+          width: 130px;
+          height: 84px;
+          margin:44px auto 77px;
+        }
+        .template_lxj_6{
+          width: 130px;
+          height: 180px;
+          margin:11px auto 14px;
+        }
+        .template_lxj_7{
+          width: 130px;
+          height: 180px;
+          margin:29px auto 28px;
+        }
+        .page_8{
+          margin-top: 0;
+        }
+        .template_lxj_8{
+          width: 162px;
+          height: 237px;
+          margin:0 auto ;
+        }
+
+
+        .template_lxj_9{
+          width: 289px;
+          height: 207px;
+          position: relative;
+          margin:  15px auto;
+          .div_page{
+            width: 188px;
+            float: right;
+          }
+          .mainTitle{
+            height: 12px;
+            line-height: 12px;
+            font-size: 12px;
+            width: 75px;
+            text-align: center;
+            margin: 100px auto 8px;
+            box-shadow: #888888 2px 2px 2px;
+            background: #e9e9e9;
+            border: 1px solid #d2d2d2;
+            box-sizing: border-box;
+            float: left;
+          }
+        }
+        .template_lxj_10{
+          width: 289px;
+          height: 220px;
+          position: relative;
+          margin:  8px auto;
+          .div_page{
+            width: 250px;
+            height: 198px;
+            float: right;
+            overflow: hidden;
+          }
+          .mainTitle{
+            height: 12px;
+            line-height: 12px;
+            font-size: 12px;
+            width: 128px;
+            margin-top: 206px;
+            margin-left: 160px;
+            box-shadow: #888888 2px 2px 2px;
+            background: #e9e9e9;
+            border: 1px solid #d2d2d2;
+            box-sizing: border-box;
+          }
+        }
+        .template_lxj_11{
+          width: 289px;
+          height: 216px;
+          position: relative;
+          margin:  10px auto;
+          .div_page{
+            width: 289px;
+            height: 178px;
+            margin-top: 8px;
+            overflow: hidden;
+          }
+          .mainTitle{
+            height: 12px;
+            line-height: 12px;
+            font-size: 12px;
+            width: 128px;
+            margin-top: 16px;
+            margin-left: 160px;
+            box-shadow: #888888 2px 2px 2px;
+            background: #e9e9e9;
+            border: 1px solid #d2d2d2;
+            box-sizing: border-box;
+          }
+        }
+        .template_lxj_12{
+          width: 324px;
+          height: 237px;
+          position: relative;
+          margin:  0px auto;
+        }
+        .template_lxj_100{
+          width: 130px;
+          height: 130px;
+          margin: 0 auto;
+          margin-top: 41px;
+        }
+        .mainTitle_footer{
+          height: 12px;
+          line-height: 12px;
+          font-size: 12px;
+          width: 78px;
+          margin: 16px auto 8px;
+          box-shadow: #888888 2px 2px 2px;
+          background: #e9e9e9;
+          border: 1px solid #d2d2d2;
+          box-sizing: border-box;
+        }
+        .login_footer{
+          width: 92px;
+          height: 30px;
+          background: url("../../assets/img/title_logo.png") no-repeat;
+          background-size: 100%;
+          margin-left: 10px;
+          margin-top: 6px;
+        }
+      }
+    }
+  }
+}
