--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -3236,3 +3236,18 @@ body .lomoTemplate .template04 {
     }
   }
 }
+
+//
+//.span_40{
+//  position: absolute;
+//  word-break: break-all;
+//  word-wrap: break-word;
+//  //font-family: 方正兰亭中黑;
+//  line-height: 2;
+//  transform-origin: left top 0px;
+//  font-size: 12px;
+//  transform: scale(0.287963);
+//  width: 128px;
+//  left: 0px;
+//  top: 0px;
+//}
