旅行记预览

--- a/src/components/album/previewBookScss/huace-250X342.scss
+++ b/src/components/album/previewBookScss/huace-250X342.scss
@@ -5,12 +5,12 @@
 }
 
 .preview {
-  .size-342X500 {
+  .size-huace-250X342 {
     .el-dialog--small {
       width: 720px;
     }
     .preview_comtent {
-      width: 616px;
+      width: 656px;
       height: 450px;
       margin: 0 auto;
     }
