小时光预览🎉🎉

--- a/src/components/album/previewBookScss/lvxingji-250X250.scss
+++ b/src/components/album/previewBookScss/lvxingji-250X250.scss
@@ -156,6 +156,8 @@
       height: 22px;
       padding: 0 .2em;
       line-height: 22px;
+      font-size: 12px;
+      text-align: left;
       border: 1px solid #eee;
     }
     .img_style_100_1 {
