--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -3151,6 +3151,7 @@ body .lomoTemplate .template04 {
             border: 1px solid #d2d2d2;
             box-sizing: border-box;
             float: left;
+            overflow: hidden;
           }
         }
         .template_lxj_10{
@@ -3223,6 +3224,7 @@ body .lomoTemplate .template04 {
           background: #e9e9e9;
           border: 1px solid #d2d2d2;
           box-sizing: border-box;
+          overflow: hidden;
         }
         .login_footer{
           width: 92px;
