--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -258,6 +258,20 @@ html,body{width:100%;height: 100%;font-family: "微软雅黑";font-weight: 500;}
         background:#989898!important;
     }
 
+    //时光集
+    //浪漫紫
+    .shiguangji_lmz_fm{
+      background: url(http://m.builder.artup.com/static/img/zi.png) !important;
+      background-size: 100% 100% !important;
+    }
+    .shiguangji_lmz_fe {
+      background: #5b4f83;
+    }
+    .shiguangji_lmz_fd{
+      background: url(http://m.builder.artup.com/static/img/zi3.png) !important;
+      background-size: 100% 100% !important;
+    }
+
 .firstPage,.lastPage{ //首页和尾页书皮的样式
    .page_bg{
        height: 212px;
@@ -3239,6 +3253,78 @@ body .lomoTemplate .template04 {
   }
 }
 
+//
+#product{
+  .shiguangji_one{
+      .titlePage_bg{
+        height: 223px;
+        width: 320px;
+      }
+      .time_bg{
+        width: 324px;
+        height: 252px;
+        position: relative;
+        .firstPage{
+          background: #1d1c19;
+          height:223px ;
+          .page_bg{
+            height:223px;
+          }
+        }
+        .lastPage{
+          background: #efefef;
+          height:223px ;
+          .page_bg{
+            height:223px;
+          }
+        }
+        .pubilc_div{
+          height:252px;
+        }
+      }
+      .text{
+        width: 142px;
+      }
+  //  时光集样式
+      .template_lxj_1{
+        .mainTitle{
+          height: 12px;
+          line-height: 12px;
+          font-size: 12px;
+          margin: 82px auto 15px;
+        }
+        .box_text{
+          margin: 0px auto 78px;
+          height: 36px;
+          line-height: 12px;
+          font-size: 12px;
+        }
+      }
+    .template_lxj_2{
+      width: 142px;
+      height: 197px;
+      margin: 5px auto;
+    }
+    .template_lxj_3{
+      width: 142px;
+      height: 197px;
+      margin: 5px auto 5px;
+      .div_page{
+        height: 96px;
+      }
+    }
+    .template_lxj_4{
+      width: 142px;
+      height: 128px;
+      margin: 44px auto 35px;
+    }
+    .template_lxj_5{
+      width: 142px;
+      height: 102px;
+      margin: 57px auto 48px;
+    }
+  }
+}
 //
 //.span_40{
 //  position: absolute;
