--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -3281,6 +3281,9 @@ body .lomoTemplate .template04 {
         .pubilc_div{
           height:252px;
         }
+        .pubilc_div:nth-of-type(2n+2){
+          border-left: 1px solid #efefef;
+        }
       }
       .text{
         width: 142px;
