--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -2230,6 +2230,51 @@ body .lomoTemplate .template04 {
     text-indent:100px;
   }
 }
+//台历编辑
+#gualiEdit{
+  .guali_img{
+    height: 34px;
+    img{
+      width: 100%;
+    }
+  }
+  .pubilc_heji_div{
+    background: #fff;
+  }
+  .time_bg{
+    width: 232px;
+    height: 224px;
+    .guali_first{
+      height: 184px;
+    }
+    .page{
+      height: 30px;
+      margin-top: 0;
+    //  页码
+      .opacity_page{
+        width: 100%;
+        position: absolute;
+        left:0;
+        top:0;
+        height: 30px;
+        background: #efefef;
+      }
+    }
+  }
+  .bbs_hengban{
+    width:100%;
+    height: 150px;
+    margin:11px auto 0;
+
+
+  }
+  .pageleft{
+    width: 232px;
+    text-align: center !important;
+    display: block;
+    text-indent: 0;
+  }
+}
 
 //旅行记
 #product{
@@ -3328,6 +3373,18 @@ body .lomoTemplate .template04 {
     }
   }
 }
+//挂历
+//#guali {
+//  .guali_hengban{
+//    .guali_img{
+//      width: 100%;
+//      height: 34px;
+//      background: #fff;
+//    }
+//
+//  }
+//}
+
 //
 //.span_40{
 //  position: absolute;
