时光集4产品

--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -271,6 +271,42 @@ html,body{width:100%;height: 100%;font-family: "微软雅黑";font-weight: 500;}
       background: url(http://m.builder.artup.com/static/img/zi3.png) !important;
       background-size: 100% 100% !important;
     }
+//    随性绿
+    .shiguangji_sxl_fm{
+    background: url(http://m.builder.artup.com/static/img/lv.png) !important;
+    background-size: 100% 100% !important;
+    }
+    .shiguangji_sxl_fe {
+      background: #1b8275;
+    }
+    .shiguangji_sxl_fd{
+      background: url(http://m.builder.artup.com/static/img/lv3.png) !important;
+      background-size: 100% 100% !important;
+    }
+    //欢聚红
+    .shiguangji_hjh_fm{
+      background: url(http://m.builder.artup.com/static/img/red.png) !important;
+      background-size: 100% 100% !important;
+    }
+    .shiguangji_hjh_fe {
+      background: #bb356c;
+    }
+    .shiguangji_hjh_fd{
+      background: url(http://m.builder.artup.com/static/img/red3.png) !important;
+      background-size: 100% 100% !important;
+    }
+  //    纯真白
+    .shiguangji_czb_fm{
+      background: url(http://m.builder.artup.com/static/img/hui.png) !important;
+      background-size: 100% 100% !important;
+    }
+    .shiguangji_czb_fe {
+      background: #dbd3cb;
+    }
+    .shiguangji_czb_fd{
+      background: url(http://m.builder.artup.com/static/img/hui3.png) !important;
+      background-size: 100% 100% !important;
+    }
 
 .firstPage,.lastPage{ //首页和尾页书皮的样式
    .page_bg{
@@ -2241,6 +2277,23 @@ body .lomoTemplate .template04 {
   .pubilc_heji_div{
     background: #fff;
   }
+  //  台历竖着的时候
+  .taili_shu{
+    .guali_first{
+      height: 254px !important;
+    }
+    height: 290px !important;
+    overflow: hidden;
+    .time_bg{
+      height: 290px ;
+
+    }
+    .time_pu{
+      .bbs_hengban{
+        height: 220px;
+      }
+    }
+  }
   .time_bg{
     width: 232px;
     height: 224px;
@@ -2274,6 +2327,10 @@ body .lomoTemplate .template04 {
     display: block;
     text-indent: 0;
   }
+
+
+
+
 }
 
 //旅行记
