--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -2277,6 +2277,38 @@ body .lomoTemplate .template04 {
   .pubilc_heji_div{
     background: #fff;
   }
+
+  //小台历
+  .taili_xiaoguali{
+    width: 152px !important;
+    height: 260px !important;
+    overflow: hidden;
+    .guali_first{
+      height: 220px !important;
+      pointer-events: none !important;
+      .div_page{
+        background: url("http://image2.artup.com/static/pc/images/guali_template/xiaoguali_title.jpg") no-repeat;
+        background-size: 100% 100%;
+      }
+    }
+
+    .time_pu{
+      .bbs_hengban{
+        width: 140px;
+        height: 184px;
+        margin: 6px auto 6px;
+      }
+    //  页数
+      .page{
+        .pageleft{
+          width: 152px;
+        }
+      }
+
+    }
+  }
+
+
   //  台历竖着的时候
   .taili_shu{
     .guali_first{
@@ -3181,7 +3213,6 @@ body .lomoTemplate .template04 {
             line-height: 12px;
             margin: 10px auto 90px;box-shadow: #888888 2px 2px 2px;
             background: #e9e9e9;
-
           }
         }
         .template_lxj_2{
